force-app/main/default/objects/SObjectTypeTestClasse__c/SObjectTypeTestClasse__c.object-meta.xml
<CustomObject>
    <label>SObjectType Test Classe</label>
    <nameField>
        <label>SObjectType Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SObjectTypes Test Classe</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>