force-app/main/default/objects/SObjectTypeTestClasse__c/fields/Attribute10__c.field-meta.xml
<CustomField>
    <fullName>Attribute10__c</fullName>
    <label>Attribute10</label>
    <length>150</length>
    <type>Text</type>
</CustomField>