force-app/main/default/objects/SObjectTypeTestClasse__c/fields/Attribute11__c.field-meta.xml
<CustomField>
    <fullName>Attribute11__c</fullName>
    <label>Attribute11</label>
    <length>150</length>
    <type>Text</type>
</CustomField>