force-app/main/default/objects/SObjectTypeTestClasse__c/fields/Attribute12__c.field-meta.xml
<CustomField>
    <fullName>Attribute12__c</fullName>
    <label>Attribute12</label>
    <length>150</length>
    <type>Text</type>
</CustomField>