force-app/main/default/objects/SObjectTypeTestClasse__c/fields/GlobalPost__c.field-meta.xml
<CustomField>
    <fullName>GlobalPost__c</fullName>
    <label>GlobalPost</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>