force-app/main/default/objects/SObjectTypeTestClasse__c/fields/LineOrder__c.field-meta.xml
<CustomField>
    <fullName>LineOrder__c</fullName>
    <label>LineOrder</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>