force-app/main/default/objects/SObjectTypeTestClasse__c/fields/lineType__c.field-meta.xml
<CustomField>
    <fullName>lineType__c</fullName>
    <label>lineType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>header</fullName>
            </value>
            <value>
                <fullName>line</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>