force-app/main/default/objects/SObjectTypeTestClasse__c/fields/SObjectType__c.field-meta.xml
<CustomField>
    <fullName>SObjectType__c</fullName>
    <label>SObjectType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Product2</fullName>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>TimeSheet__c</fullName>
            </value>
            <value>
                <fullName>periode__c</fullName>
            </value>
            <value>
                <fullName>TimeSheetEntry__c</fullName>
            </value>
            <value>
                <fullName>Invoice__c</fullName>
            </value>
            <value>
                <fullName>InvoiceLine__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>